--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,6 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.22'
-        run: (exit 0)
+
+      - name: Print Go version
+        run: go version
